# relkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  action.yml  pyproject.toml
.github/workflows/: ci.yml
src/relkit/: __init__.py  changelog.py  cli.py  config.py  git.py  lint.py  parser.py
tests/: test_changelog.py  test_cli.py  test_config.py  test_git_integration.py  test_lint.py  test_parser.py
