[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "relkit"
version = "0.2.0"
description = "Generate clean, grouped changelogs from Conventional Commits — zero dependencies, one binary."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "relkit contributors" },
]
keywords = ["changelog", "git", "conventional-commits", "release", "cli", "maintainer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
Homepage = "https://github.com/GOGOGTA/relkit"
Issues = "https://github.com/GOGOGTA/relkit/issues"

[project.scripts]
relkit = "relkit.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/relkit"]
